# rust-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: check.yaml  publish.yaml
src/: tracing.rs
