[package]
authors = ["Pavel Perestoronin <eigenein@gmail.com>"]
categories = [] # TODO
description = "My package description" # TODO
edition = "2021"
keywords = [] # TODO
license-file = "LICENSE"
name = "my-package-name" # TODO
publish = false
readme = "README.md"
repository = "https://github.com/eigenein/rust-template" # TODO
version = "0.0.1"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"

[lints.clippy]

# Categories:
all = "warn"
nursery = "warn"
pedantic = "warn"

# Individual flags:
future_not_send = "allow"
missing_errors_doc = "allow"
module_name_repetitions = "allow"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.16", features = ["cargo", "derive", "env"] }
dotenvy = "0.15.7"
sentry = { version = "0.32.1", default-features = false, features = ["anyhow", "backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
